# splits

./: .gitignore  README.md
src/: CMakeLists.txt
src/algorithms/: adv_grader.cpp  alpha_beta.cpp  game_algorithm.cpp  mc_utils.cpp  mcts.cpp  minimax.cpp  monte_carlo.cpp  random_game_algorithm.cpp  simple_grader.cpp  transposition_table.cpp  zobrist_hasher.cpp
src/arena/: ab_tournament.cpp  match.cpp  mcts_tournament.cpp  tournament.cpp
src/include/: adv_grader.h  alpha_beta.h  game_algorithm.h  mc_utils.h  mcts.h  minimax.h  monte_carlo.h  random_game_algorithm.h  simple_grader.h  splits.h  transposition_table.h  zobrist_hasher.h
src/presentation/: alphabeta_speeds.cpp  play_match.cpp
src/rules/: splits.cpp
src/tests/: alg_sanity.cpp  sanity.cpp  sanity_with_constant_mallocing.cpp
tex/: praca.tex  rozgrywka.tex
